# mypyc_ipython

./: .gitignore  README.md  requirements.txt  setup.cfg
mypyc_ipython/: __init__.py  _magic.py
