[metadata]
name = mypyc_ipython
version = attr: mypyc_ipython.__version__

url = https://github.com/c-bata/mypyc_ipython
author = Masashi Shibata
author_email = m.sh.nwpct1@gmail.com
description = IPython magic command interface for interactive work with mypyc.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only

[options]
python_requires = >=3.6
include_package_data = True
packages = find:
setup_requires =
    wheel
install_requires =
    mypy>=0.800
    ipython

[flake8]
max-line-length = 99
statistics = True
exclude = venv,build
